@@ -4,6 +4,7 @@
 
   * Added loud tokens support
   * Added complex patterns support
+  * Added key-based inflection support
   * Added :cache_aware switch
   * Improved validation of token and kind identifiers
 
